Fix compile, misc fixes

--- a/newsletter/2022-07-08-patch-2.7.md
+++ b/newsletter/2022-07-08-patch-2.7.md
@@ -35,24 +35,20 @@ description: 'A recap of patch 2.4->2.7 and the theorycrafting work published.'
 
 ### Yae Miko
 
-<Card item={require('//characters/electro/yae-miko')} />
-
+[Character Page](/characters/electro/yae-miko)  
 [Evidence Vault Page](/evidence/characters/electro/yae-miko)
 
 ### Kamisato Ayato
 
-<Card item={require('//characters/hydro/ayato')} />
-
+[Character Page](/characters/hydro/ayato)  
 [Evidence Vault Page](/evidence/characters/hydro/ayato)
 ### Yelan
 
-<Card item={require('//characters/hydro/yelan')} />
-
+[Character Page](/characters/hydro/yelan)  
 [Evidence Vault Page](/evidence/characters/hydro/yelan)
 ### Kuki Shinobu
 
-<Card item={require('//characters/electro/shinobu')} />
-
+[Character Page](/characters/electro/shinobu)  
 [Evidence Vault Page](/evidence/characters/electro/shinobu)
 
 ## Editorial
