Move character pages

--- a/newsletter/2022-01-03-patch-2.3b.md
+++ b/newsletter/2022-01-03-patch-2.3b.md
@@ -22,8 +22,8 @@ description: "Itto Banner ft. Gorou, Barbara & Xiangling"
 
 ### Itto
 
-[Character Page](/characters/geo/itto)  
-[Evidence Vault Page](/evidence/characters/geo/itto)
+[Character Page](/characters/geo/arataki-itto)  
+[Evidence Vault Page](/evidence/characters/geo/arataki-itto)
 
 ## Simultaneous Reaction Priority
 
@@ -62,9 +62,9 @@ Simultaneous Reaction Priority theory is an expansion of the Elemental Gauge The
 |             | [Teapot Dog Abuse](/evidence/general-mechanics/overworld#teapot-dog-abuse)                                                                                                                                  | Asaki\#9139                                                                                                                                                                                         |
 |             | [Gorou Basic Mechanics](/evidence/characters/geo/gorou#basic-mechanics)                                                                                                                                     | Aevean Leeow\#1362, BowTae\#0141, Frost--Flame\#2563, JonahFarc\#7056, MeCrush14\#2271, Nass008\#8577, Neptunya\#8291, pai\#3602, Steno\#0119, Trosalio\#0420, Vess\#7650, Vherax\#5321             |
 | December 26 | [Cooking Pot Super Jump](/evidence/general-mechanics/bugs#cooking-pot-super-jump)                                                                                                                           | Nass008\#8577                                                                                                                                                                                       |
-|             | [Itto Basic Mechanics](/evidence/characters/geo/itto#basic-mechanics)                                                                                                                                       | borderline\#3100, BowTae\#0141, CC\#5588, deRykcihC\#0551, MeCrush14\#2271, nxriaki\#6316, Pablos\#1142, pai\#3602, ProfHugo\#6478, JonahFarc\#7056, tenten\#1010, Ultimate Noob\#2955, Yukie\#7916 |
+|             | [Itto Basic Mechanics](/evidence/characters/geo/arataki-itto#basic-mechanics)                                                                                                                               | borderline\#3100, BowTae\#0141, CC\#5588, deRykcihC\#0551, MeCrush14\#2271, nxriaki\#6316, Pablos\#1142, pai\#3602, ProfHugo\#6478, JonahFarc\#7056, tenten\#1010, Ultimate Noob\#2955, Yukie\#7916 |
 | December 30 | [The Rock](/evidence/general-mechanics/overworld#the-rock)                                                                                                                                                  | Aevean Leeow\#1362, Mcpie\#8672, BowTae\#0141, KQM Stream Meme Team, and KQM Friends                                                                                                                |
-|             | [Raiden Coordinated Attack Cooldown](/evidence/characters/electro/raiden#raiden-coordinated-attack-cooldown)                                                                                                | TWICE\#9958                                                                                                                                                                                         |
+|             | [Raiden Coordinated Attack Cooldown](/evidence/characters/electro/raiden-shogun#raiden-coordinated-attack-cooldown)                                                                                         | TWICE\#9958                                                                                                                                                                                         |
 |             | [EMC Amulets Delay](/evidence/characters/electro/traveler-electro#amulets-delay)                                                                                                                            | pai\#3602                                                                                                                                                                                           |
 |             | [EC Ticks Are Neither Reactions Nor Hits](/evidence/combat-mechanics/elemental-effects/transformative-reactions#ec-ticks-are-neither-reactions-nor-hits)                                                    | NZPIEFACE\#8439                                                                                                                                                                                     |
 |             | [Simultaneous Reaction Priority](/combat-mechanics/elemental-effects/simultaneous-reaction-priority)                                                                                                        | Many KQM Contributors                                                                                                                                                                               |
