--- a/newsletter/2022-02-15-patch-2.4.md
+++ b/newsletter/2022-02-15-patch-2.4.md
@@ -29,8 +29,8 @@ description: "A recap of patch 2.4 and the theorycrafting work published."
 
 ### Yun Jin
 
-[Character Page](/characters/geo/yunjin)  
-[Evidence Vault Page](/evidence/characters/geo/yunjin)
+[Character Page](/characters/geo/yun-jin)  
+[Evidence Vault Page](/evidence/characters/geo/yun-jin)
 
 ## Theorycrafting Library Submissions
 
@@ -38,7 +38,7 @@ description: "A recap of patch 2.4 and the theorycrafting work published."
 | :--------- | :---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :------------------------------------------------------------------------- |
 | January 2  | [Lightning Rose Vertical Range](/evidence/characters/electro/lisa#lightning-rose-vertical-range)                                                                                          | ArchedNosi#1484                                                            |
 | January 4  | [Electro Fog](/evidence/general-mechanics/overworld#electro-fog)                                                                                                                          | pai\#3602                                                                  |
-| January 5  | [Perfect Counter Cannon](/evidence/characters/geo/yunjin#perfect-counter-cannon)                                                                                                          | Sparko53557#7010, Reens#9389                                               |
+| January 5  | [Perfect Counter Cannon](/evidence/characters/geo/yun-jin#perfect-counter-cannon)                                                                                                         | Sparko53557#7010, Reens#9389                                               |
 |            | [Glacial Waltz Proc Frames and Interactions](/evidence/characters/cryo/kaeya#glacial-waltz-proc-frames-and-interactions)                                                                  | Visc#5095, Raf#7220, CQLQRS#7853, phaZ#6461                                |
 |            | [Pyronado Proc Frames and Interactions](/evidence/characters/pyro/xiangling#pyronado-proc-frames-and-interactions)                                                                        | Visc#5095, Raf#7220, CQLQRS#7853, phaZ#6461                                |
 | January 8  | [ER Increase From EMC Amulets Doesn't Affect Passives](/evidence/characters/electro/traveler-electro#er-increase-from-emc-amulets-doesnt-affect-passives)                                 | D.....K#9002                                                               |
@@ -49,13 +49,13 @@ description: "A recap of patch 2.4 and the theorycrafting work published."
 |            | [Ganyu Elemental Skill has no ICD](/evidence/characters/cryo/ganyu#ganyu-elemental-skill-has-no-icd)                                                                                      | TWICE#9958                                                                 |
 |            | [Weekly BP Cap During Launch Week](/evidence/general-mechanics/resources-and-efficiency#weekly-bp-cap-during-launch-week)                                                                 | Mcpie#8672                                                                 |
 |            | [Speed Comparsion Between Walk Jump And Continuous Walk](/evidence/general-mechanics/movement-and-physics#speed-comparsion-between-walk-jump-and-continuous-walk)                         | Mcpie#8672                                                                 |
-| January 11 | [Yunjin Basic Mechanics](/evidence/characters/geo/yunjin)                                                                                                                                 | Many Contributors                                                          |
+| January 11 | [Yunjin Basic Mechanics](/evidence/characters/geo/yun-jin)                                                                                                                                | Many Contributors                                                          |
 |            | [Shenhe Basic Mechanics](/evidence/characters/cryo/shenhe)                                                                                                                                | Many Contributors                                                          |
 |            | [All Models Can Roll In Place](/evidence/general-mechanics/miscellaneous-entries#all-models-can-roll-in-place)                                                                            | Mcpie#8672                                                                 |
 |            | [Kamera Gadget Knockback Cancel](/evidence/general-mechanics/miscellaneous-entries#kamera-gadget-knockback-cancel)                                                                        | JoJoCheck#4450                                                             |
 | January 13 | [Azhdaha's Element Is The Same For All Regions](/evidence/combat-mechanics/enemy-mechanics/enemy-interactions#azhdahas-element-is-the-same-for-all-regions)                               | Sil3nt#0961                                                                |
 |            | [Jade Screen ICD](/evidence/characters/geo/ningguang#jade-screen-icd)                                                                                                                     | Goden#2155                                                                 |
-|            | [Itto N1 Burst Cancel SS Stack](/evidence/characters/geo/itto#itto-n1-burst-cancel-ss-stack)                                                                                              | Aftermath#7658                                                             |
+|            | [Itto N1 Burst Cancel SS Stack](/evidence/characters/geo/arataki-itto#itto-n1-burst-cancel-ss-stack)                                                                                      | Aftermath#7658                                                             |
 |            | [Lightning Rose Summon DMG Range](/evidence/characters/electro/lisa#lightning-rose-summon-dmg-range)                                                                                      | ArchedNosi#1484                                                            |
 |            | [Rifthound Skulls Charging](/evidence/combat-mechanics/enemy-mechanics/enemy-interactions#rifthound-skulls-charging)                                                                      | EtoPashka#0690                                                             |
 |            | [Polar Star ICD](/evidence/equipment/weapons#polar-star-icd)                                                                                                                              | Latiwings#3308, GottaGoFast#7876, Cenpi#3224, NZPIEFACE#8439, Xreejan#1180 |
@@ -71,8 +71,8 @@ description: "A recap of patch 2.4 and the theorycrafting work published."
 | January 21 | [Fischl A4 And C6 Snapshot Mechanics](/evidence/characters/electro/fischl#fischl-a4-and-c6-snapshot-mechanics)                                                                            | sigurd#3854                                                                |
 |            | [Shenhe E has no ICD](/evidence/characters/cryo/shenhe#shenhe-e-has-no-icd)                                                                                                               | daibangden2460#8410                                                        |
 |            | [Venti Elemental Absorption Proc Count Correction](/evidence/characters/anemo/venti#venti-elemental-absorption-proc-count-correction)                                                     | CC#5588                                                                    |
-|            | [Yun Jin Flags In Freeze](/evidence/characters/geo/yunjin#yun-jin-flags-in-freeze)                                                                                                        | Goden#2155                                                                 |
-|            | [Kazuha Tap E Air Time Can Be Shortened](/evidence/characters/anemo/kazuha#kazuha-tap-e-air-time-can-be-shortened)                                                                        | Quark#7392                                                                 |
+|            | [Yun Jin Flags In Freeze](/evidence/characters/geo/yun-jin#yun-jin-flags-in-freeze)                                                                                                       | Goden#2155                                                                 |
+|            | [Kazuha Tap E Air Time Can Be Shortened](/evidence/characters/anemo/kaedehara-kazuha#kazuha-tap-e-air-time-can-be-shortened)                                                              | Quark#7392                                                                 |
 |            | [Leg Break Bridge](/evidence/general-mechanics/bugs#leg-break-bridge)                                                                                                                     | Lilith of the night#5024                                                   |
 |            | [Stuff Can Infuse Cryo](/evidence/general-mechanics/overworld#stuff-can-infuse-cryo)                                                                                                      | Raven#9205                                                                 |
 |            | [Teapot Dog Abuse 2](/evidence/general-mechanics/overworld#teapot-dog-abuse-2)                                                                                                            | Asaki#9139, BowTae#0141, ShampooBrain#9583                                 |
@@ -85,7 +85,7 @@ description: "A recap of patch 2.4 and the theorycrafting work published."
 |            | [Beidou Counter Startup](/evidence/characters/electro/beidou#beidou-counter-startup)                                                                                                      | Aftermath#7658                                                             |
 |            | [Marks And Statuses](/evidence/combat-mechanics/enemy-mechanics/enemy-interactions#marks-and-statuses)                                                                                    | Asaki#9139                                                                 |
 |            | [Mistsplitter NA Stack From CA](/evidence/equipment/weapons#mistsplitter-na-stack-from-ca)                                                                                                | Trosalio#0420                                                              |
-|            | [Infinite Jellyfish Extension](/evidence/characters/hydro/kokomi#infinite-jellyfish-extension)                                                                                            | Steno#0119                                                                 |
+|            | [Infinite Jellyfish Extension](/evidence/characters/hydro/sangonomiya-kokomi#infinite-jellyfish-extension)                                                                                | Steno#0119                                                                 |
 |            | [Sucrose E No Particles Bug](/evidence/characters/anemo/sucrose#sucrose-e-no-particles-bug)                                                                                               | Charisma#5567                                                              |
 |            | [Not All Falls Water is False Water](/evidence/general-mechanics/overworld#not-all-falls-water-is-false-water)                                                                            | Sayline#5959                                                               |
 | January 28 | [Size Does Not Matter](/evidence/general-mechanics/movement-and-physics#size-does-not-matter)                                                                                             | Mcpie#8672                                                                 |
@@ -98,7 +98,7 @@ description: "A recap of patch 2.4 and the theorycrafting work published."
 |            | [Retry and Exit Menu Issues](/evidence/general-mechanics/bugs#retry-and-exit-menu-issues)                                                                                                 | Asaki#9139                                                                 |
 | January 29 | [4OHC does not shatter frozen enemies](/evidence/equipment/artifacts#4ohc-does-not-shatter-frozen-enemies)                                                                                | Puffin#9920                                                                |
 |            | [Childe Ranged to Melee NA Combo](/evidence/characters/hydro/tartaglia#childe-ranged-to-melee-na-combo)                                                                                   | Poro#4695                                                                  |
-|            | [Successful Itto DEF Conversion with Gorou](/evidence/characters/geo/itto#successful-itto-def-conversion-with-gorou)                                                                      | Mr. Pillow#0065                                                            |
+|            | [Successful Itto DEF Conversion with Gorou](/evidence/characters/geo/arataki-itto#successful-itto-def-conversion-with-gorou)                                                              | Mr. Pillow#0065                                                            |
 | January 31 | [Childe Elemental Skill and Attack or Burst on the Same Frame](/evidence/characters/hydro/tartaglia#elemental-skill-and-attack-or-burst-on-the-same-frame)                                | BowTae#0141                                                                |
 | February 2 | [Fischl A1 Special Multiplier](/evidence/characters/electro/fischl#fischl-a1-special-multiplier)                                                                                          | Apxllo#2021                                                                |
 |            | [C4 Mona Does Not Show Up in Stat Page](/evidence/characters/hydro/mona#c4-mona-does-not-show-up-in-stat-page)                                                                            | Mcpie#8672                                                                 |
