update(icd): move icd pages and rewrite

--- a/newsletter/2021-06-20-patch-1.6b.md
+++ b/newsletter/2021-06-20-patch-1.6b.md
@@ -51,4 +51,4 @@ description: "Kazuha Banner ft. Rosaria, Razor, and Bennett"
 |         | [Recasting Oz counts as a Using Skill](/evidence/characters/electro/fischl#resummoning-oz-while-hes-still-active-counts-as-using-an-elemental-skill)           | Peekays\#2722                                                                     |
 | July 18 | [Xingqiu Rain Sword DMG Reduction is a conferrable attribute](/evidence/characters/hydro/xingqiu#xingqiu-rain-sword-dmg-reduction-is-a-conferrable-attribute)  | jamberry\#7142                                                                    |
 |         | [Sucrose A4 snapshots EM value](/evidence/characters/anemo/sucrose#sucrose-a4-snapshots-em-value)                                                              | NZPIEFACE\#8439                                                                   |
-|         | [ICD Table](/combat-mechanics/elemental-effects/internal-cooldown-of-elemental-application#internal-cooldown-table)                                            | Zakharov\#5645                                                                    |
+|         | [ICD Table](/combat-mechanics/internal-cooldown)                                            | Zakharov\#5645                                                                    |
