Fix Yunjin -> Yun Jin; use clamp in CRIT formula

--- a/newsletter/2022-02-15-patch-2.4.md
+++ b/newsletter/2022-02-15-patch-2.4.md
@@ -49,7 +49,7 @@ description: "A recap of patch 2.4 and the theorycrafting work published."
 |            | [Ganyu Elemental Skill has no ICD](/evidence/characters/cryo/ganyu#ganyu-elemental-skill-has-no-icd)                                                                                      | TWICE#9958                                                                 |
 |            | [Weekly BP Cap During Launch Week](/evidence/general-mechanics/resources-and-efficiency#weekly-bp-cap-during-launch-week)                                                                 | Mcpie#8672                                                                 |
 |            | [Speed Comparsion Between Walk Jump And Continuous Walk](/evidence/general-mechanics/movement-and-physics#speed-comparsion-between-walk-jump-and-continuous-walk)                         | Mcpie#8672                                                                 |
-| January 11 | [Yunjin Basic Mechanics](/evidence/characters/geo/yun-jin)                                                                                                                                | Many Contributors                                                          |
+| January 11 | [Yun Jin Basic Mechanics](/evidence/characters/geo/yun-jin)                                                                                                                               | Many Contributors                                                          |
 |            | [Shenhe Basic Mechanics](/evidence/characters/cryo/shenhe)                                                                                                                                | Many Contributors                                                          |
 |            | [All Models Can Roll In Place](/evidence/general-mechanics/miscellaneous-entries#all-models-can-roll-in-place)                                                                            | Mcpie#8672                                                                 |
 |            | [Kamera Gadget Knockback Cancel](/evidence/general-mechanics/miscellaneous-entries#kamera-gadget-knockback-cancel)                                                                        | JoJoCheck#4450                                                             |
