Add Mona C1 retest

--- a/newsletter/2022-01-03-patch-2.3b.md
+++ b/newsletter/2022-01-03-patch-2.3b.md
@@ -35,7 +35,7 @@ Simultaneous Reaction Priority theory is an expansion of the Elemental Gauge The
 
 | Date        | Entry                                                                                                                                                                                                       | Author\(s\)                                                                                                                                                                                         |
 | :---------- | :---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| December 16 | [Mona C1 ~~Mechanics~~ is Broken](/evidence/characters/hydro/mona#mona-c1-snapshot-for-vape)                                                                                                                | Tibo\#4309                                                                                                                                                                                          |
+| December 16 | [Mona C1 ~~Mechanics~~ is Broken](/evidence/characters/hydro/mona#mona-c1-snapshot)                                                                                                                         | Tibo\#4309                                                                                                                                                                                          |
 |             | [Beidou C6 Burst Interaction](/evidence/characters/electro/beidou#beidou-c6-doesnt-apply-on-initial-cast)                                                                                                   | Xreejan\#1180                                                                                                                                                                                       |
 |             | [Inazuma Artifact Spots](/evidence/general-mechanics/overworld#inazuma-artifact-spots)                                                                                                                      | Mcpie\#8672                                                                                                                                                                                         |
 |             | [Sucrose Absorbed Damage is Simultaneous](/evidence/characters/anemo/sucrose#sucrose-absorbed-dmg-is-simultaneous)                                                                                          | kxmndz\#4700                                                                                                                                                                                        |
