Quick Guide -> Video Guide

--- a/newsletter/2021-12-13-patch-2.3.md
+++ b/newsletter/2021-12-13-patch-2.3.md
@@ -13,7 +13,7 @@ description: "Eula & Albedo Banners ft. Bennett, Noelle and Rosaria"
 
 ## New Videos
 
-* [Quick Guide to Anemo Traveler](https://www.youtube.com/watch?v=H4Y6y7JJsvM&t=20s)
+* [Video Guide to Anemo Traveler](https://www.youtube.com/watch?v=H4Y6y7JJsvM&t=20s)
 * [8 Minute Guide to Amber](https://www.youtube.com/watch?v=QW40leHPgJ8)
 * [5 Minute Guide to Hu Tao](https://www.youtube.com/watch?v=l6YJTXkgXdM)
 
