Attempt 6.5 on fixing wording consistency

--- a/newsletter/2021-12-13-patch-2.3.md
+++ b/newsletter/2021-12-13-patch-2.3.md
@@ -22,7 +22,7 @@ description: "Eula & Albedo Banners ft. Bennett, Noelle and Rosaria"
 * [Theorycrafting Glossary](/theorycrafting)  
   _Common acronyms and terms used by theorycrafters to accurately describe game mechanics_
 * Updated Character Pages  
-  _Now include an improved format with comprehensive frame, gauge and ICD data on all skills._
+  _Now include an improved format with comprehensive frame, gauge and ICD data on all Skills._
 * Enemy Database (by Greyhound\#7836)  
   _Our new enemy database contains detailed information for each enemy type, including HP Energy drop thresholds, shield strengths, resistances, and attack descriptions._
   * [Abyss Order](/enemy-data/abyss-order)
