--- a/newsletter/2021-12-13-patch-2.3.md
+++ b/newsletter/2021-12-13-patch-2.3.md
@@ -85,7 +85,7 @@ description: "Eula & Albedo Banners ft. Bennett, Noelle and Rosaria"
 |             | [Missed Attacks on Trees Mechanics](/evidence/general-mechanics/resources-and-efficiency#missed-attacks-still-mark-trees-for-unholy-harvesting)       | Aluminum\#5462                                                 |
 |             | [Diluc Burst Damage Benefits from A4](/evidence/characters/pyro/diluc#diluc-burst-damage-benefits-from-a4)                                            | jamberry\#7142                                                 |
 |             | [Polar Star has ICD Across Independent Stacks](/evidence/equipment/weapons#polar-star-has-icd-across-independent-stacks)                              | Cenpi\#3224, Kyarumi\#0002                                     |
-|             | [Anemo MC's Burst Absorption is 2B](/evidence/characters/anemo/traveler-anemo#anemo-mcs-burst-absorption-is-2b)                                       | Kourinn\#6001                                                  |
+|             | [Anemo MC's Burst Absorption is 2U](/evidence/characters/anemo/traveler-anemo#anemo-mcs-burst-absorption-is-2b)                                       | Kourinn\#6001                                                  |
 |             | [Fruit Can Stick to Ground When Unattended](/evidence/general-mechanics/miscellaneous-entries#fruit-can-stick-to-ground-when-left-unattended)         | vinsette\#0293                                                 |
 |             | [Hakushin Ring Doesn't Trigger Off Field](/evidence/equipment/weapons#hakushin-ring-doesnt-trigger-off-field)                                         | Greyhound\#7836, Terrapin\#8603                                |
 |             | [Properties of 0 Damage Attacks](/evidence/combat-mechanics/damage/other/zero-damage-attacks#properties-of-0-damage-attacks)                          | NZPIEFACE\#8439, kol\#1593                                     |
