Update to docusaurus v3

--- a/newsletter/2022-07-08-patch-2.7.md
+++ b/newsletter/2022-07-08-patch-2.7.md
@@ -187,7 +187,7 @@ KQM has additionally partnered with Genshin Wizard. You can also now use Genshin
 | February 26 | [Resetting or Exiting a Domain does not Reset Elemental Skill Cooldowns](/evidence/general-mechanics/bugs#resetting-or-exiting-a-domain-does-not-reset-elemental-skill-cooldowns)       | Puffin\#9920                                                                                                 |
 | March 1     | [Fatui Armor and Aura Interactions](/evidence/combat-mechanics/enemy-mechanics/enemy-shields#fatui-armor-and-aura-interactions)                                                         | Rainfury\#8343                                                                                               |
 |             | [Oathsworn Passive Mechanics](/evidence/equipment/weapons#oathsworn-passive-mechanics)                                                                                                  | Kurt\#5846                                                                                                   |
-|             | [Multiple Prototype Amber Heals Don't Stack](/evidence/equipment/weapons#multiple-prototype-amber-heals-dont-stack)                                                                     | Pana <3\#0992                                                                                                |
+|             | [Multiple Prototype Amber Heals Don't Stack](/evidence/equipment/weapons#multiple-prototype-amber-heals-dont-stack)                                                                     | Pana &lt;3\#0992                                                                                                |
 | March 3     | [Superconduct Mechanic Update](/evidence/combat-mechanics/elemental-effects/transformative-reactions#superconduct-mechanic-update)                                                      | tamamo\#4303                                                                                                 |
 |             | [Bokuso Box CRIT Rate and Damage Scale off of Character Stats](/evidence/general-mechanics/miscellaneous-entries#bokuso-box-crit-rate-and-damage-scale-off-of-character-stats)          | melon\#9323                                                                                                  |
 | March 4     | [Diona's Stamina Reduction Stacks With Other Sources](/evidence/characters/cryo/diona#dionas-stamina-reduction-stacks-with-other-sources)                                               | Ultimate Noob\#2955                                                                                          |
